--- a/src/components/styles/menu.css
+++ b/src/components/styles/menu.css
@@ -48,8 +48,32 @@
   font-weight: bold;
   background-color: black;
   color: white;
-  width: 40%;
+  width: 45%;
   text-decoration: none;
+}
+
+.tweet--button {
+  border-radius: 2em;
+  padding: 12px;
+  display: flex;
+  border: 2px solid rgb(29, 161, 242);
+  justify-content: justify;
+  margin-left: 35%;
+  gap: 20px;
+  font-size: 20px;
+  font-weight: bold;
+  color: white;
+  width: 55%;
+  text-decoration: none;
+  background-color: rgb(29, 161, 242);
+  margin-top: 20px;
+  margin-bottom: 40px;
+  justify-content: center;
+}
+
+.tweet--button:hover {
+  cursor: pointer;
+  background-color: rgb(25, 140, 211);
 }
 
 .link--button:hover {
