--- a/src/components/styles/sidebar.css
+++ b/src/components/styles/sidebar.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   flex: 1;
-  background-color: bisque;
+  background-color: black;
   animation: transitionIn 0.75s;
+  z-index: 3;
 }
