--- a/src/components/styles/tweets.css
+++ b/src/components/styles/tweets.css
@@ -1,6 +1,8 @@
-.notifications {
+.tweets {
+  background-color: black;
+  color: white;
   display: flex;
   flex-direction: column;
-  flex: 1.3;
+  flex: 1;
   animation: transitionIn 0.75s;
 }
