--- a/src/index.css
+++ b/src/index.css
@@ -41,6 +41,7 @@ code {
   flex-direction: column;
   flex: 1.3;
   animation: transitionIn 0.75s;
+  border: 1px solid gray;
 }
 
 .messages {
@@ -48,6 +49,7 @@ code {
   flex-direction: column;
   flex: 2;
   animation: transitionIn 0.75s;
+  flex: 1.3;
 }
 
 @media screen and (max-width: 1350px) {
