--- a/src/components/styles/signIn.css
+++ b/src/components/styles/signIn.css
@@ -32,7 +32,7 @@
   border: 1px solid gray;
   align-self: center;
 }
-input:focus {
+.input:focus {
   border: 2px solid rgb(29, 161, 242);
   outline: none;
 }
