--- a/src/components/styles/profileTop.css
+++ b/src/components/styles/profileTop.css
@@ -14,6 +14,7 @@
   display: flex;
   flex-direction: column;
   border-bottom: 1px solid rgb(93, 96, 99);
+  position: relative;
 }
 
 .profileBottom {
@@ -51,7 +52,6 @@
   font-size: 15px;
   font-weight: bolder;
   margin-left: 76%;
-  width: 18%;
 }
 
 .setupProfile:hover {
@@ -61,7 +61,7 @@
 
 .profilePic {
   position: absolute;
-  top: 18%;
+  top: 33%;
   width: 130px;
   height: 130px;
   border-radius: 50%;
@@ -89,7 +89,6 @@ nav {
 
 .buttontweet {
   background-color: black;
-
   border: none;
   color: gray;
   padding: 12px;
@@ -125,4 +124,13 @@ button {
 
 .buttonlikes:hover {
   background-color: #383535;
+}
+
+@media screen and (max-width: 550px) {
+  .setupProfile {
+    display: none;
+  }
+  .followers {
+    margin-top: 120px;
+  }
 }
