--- a/src/index.css
+++ b/src/index.css
@@ -12,10 +12,12 @@ s * {
   font-family: "Helvetica Neue";
 }
 
-body {
+body,
+html {
+  padding: 0;
   margin: 0;
   height: 100vh;
-  max-width: 100%;
+  max-width: 100vw;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -30,7 +32,7 @@ code {
 
 .app {
   display: flex;
-  height: 100%;
+  height: 100vh;
   width: auto;
   max-width: 100%;
   position: relative;
@@ -42,25 +44,13 @@ code {
   flex: 1.3;
   animation: transitionIn 0.75s;
   border: 1px solid gray;
+  border-bottom: none;
+  height: 100%;
 }
 
 .messages {
   display: flex;
   flex-direction: column;
-  flex: 2;
   animation: transitionIn 0.75s;
   flex: 1.3;
-}
-
-@media screen and (max-width: 1350px) {
-  .homeImageDiv {
-    display: none;
-  }
-  .home--signIn {
-    align-items: center;
-    text-align: center;
-    display: flex;
-    padding: 70px;
-    margin-right: 10%;
-  }
 }
