--- a/src/components/styles/menu.css
+++ b/src/components/styles/menu.css
@@ -12,12 +12,19 @@
   color: white;
   align-items: justify;
   animation: transitionIn 0.75s;
-  height: 100%;
 }
 
 .bottom--menu {
   display: flex;
   flex-direction: column;
+}
+
+.link--icon {
+  margin-top: 20px;
+  width: 4%;
+  padding: 0;
+  margin-left: 38%;
+  margin-bottom: 15px;
 }
 
 .positionContent {
@@ -26,7 +33,7 @@
   margin-left: 7%;
   position: sticky;
   top: 0;
-  height: 100%;
+  height: 100vh;
 }
 
 .signOut--button {
@@ -108,5 +115,30 @@
   }
   .logout--img {
     display: none;
+  }
+  .link--button {
+    margin-left: 0;
+  }
+  .top--menu {
+    align-items: center;
+  }
+  .menu {
+    align-items: center;
+  }
+  .positionContent {
+    align-items: center;
+  }
+  .tweet--button {
+    margin: 0;
+    margin-top: 30px;
+    width: 100%;
+  }
+  .signOut--button {
+    width: 100%;
+    margin: 0;
+    margin-bottom: 30px;
+  }
+  .link--icon {
+    margin-right: 75%;
   }
 }
