--- a/src/components/styles/profileTop.css
+++ b/src/components/styles/profileTop.css
@@ -8,6 +8,9 @@
   font-weight: bold;
   height: 60px;
   align-items: center;
+  position: sticky;
+  top: 0;
+  z-index: 10;
 }
 
 .profileTop {
@@ -15,13 +18,6 @@
   flex-direction: column;
   border-bottom: 1px solid rgb(93, 96, 99);
   position: relative;
-}
-
-.profileBottom {
-  display: flex;
-  flex-direction: column;
-  background-color: black;
-  flex: 1;
 }
 
 .arrow {
