--- a/src/components/styles/sidebar.css
+++ b/src/components/styles/sidebar.css
@@ -6,7 +6,6 @@
   align-items: center;
   background-color: black;
   padding: 0px 70px 0px 25px;
-  height: 100%;
 }
 
 .input-icons {
@@ -14,6 +13,9 @@
   margin-bottom: 10px;
   margin-top: 10px;
   width: 100%;
+  position: sticky;
+  top: 0;
+  border: 3px solid black;
 }
 
 .icon {
@@ -31,6 +33,7 @@
   outline: none;
   border: none;
   font-size: 15px;
+  color: white;
 }
 
 .input-field:focus {
