--- a/src/components/styles/timeline.css
+++ b/src/components/styles/timeline.css
@@ -3,4 +3,14 @@
   flex-direction: column;
   flex: 1.3;
   animation: transitionIn 0.75s;
+  background-color: white;
+}
+
+.timeline--header {
+  display: flex;
+  width: 100%;
+  color: black;
+  background-color: aqua;
+  position: sticky;
+  top: 0;
 }
