--- a/src/components/styles/menu.css
+++ b/src/components/styles/menu.css
@@ -103,6 +103,21 @@
   cursor: pointer;
 }
 
+.tweet--popup {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  background-color: black;
+  z-index: 200;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  border-radius: 2em;
+  justify-content: center;
+  padding: 10px;
+}
+
 @media screen and (max-width: 1150px) {
   .link--text {
     display: none;
@@ -129,9 +144,7 @@
     align-items: center;
   }
   .tweet--button {
-    margin: 0;
-    margin-top: 30px;
-    width: 100%;
+    display: none;
   }
   .signOut--button {
     width: 100%;
