--- a/src/components/styles/messages.css
+++ b/src/components/styles/messages.css
@@ -1,7 +1,4 @@
-.notifications {
-  display: flex;
-  flex-direction: column;
-  flex: 1.3;
+.messages {
   animation: transitionIn 0.75s;
   text-align: center;
   background-color: black;
