--- a/src/components/styles/timeline.css
+++ b/src/components/styles/timeline.css
@@ -3,14 +3,91 @@
   flex-direction: column;
   flex: 1.3;
   animation: transitionIn 0.75s;
-  background-color: white;
+  background-color: black;
+}
+
+.timeline--top {
+  height: 100%;
+  border: 1px solid gray;
 }
 
 .timeline--header {
   display: flex;
-  width: 100%;
-  color: black;
-  background-color: aqua;
   position: sticky;
   top: 0;
+  background-color: black;
+  color: white;
+  font-size: 20px;
+  font-weight: bold;
+  height: 60px;
+  align-items: center;
+  z-index: 10;
+  padding: 20px;
+  background-color: rgb(0, 0, 0, 0.8);
+}
+
+.timeline--image {
+  width: 55px;
+  height: 55px;
+}
+
+.timeline--pic {
+  width: 55px;
+  height: 55px;
+  object-fit: cover;
+  border-radius: 50%;
+}
+
+.newTweet {
+  display: flex;
+  align-items: top;
+  gap: 20px;
+  height: 80px;
+  background-color: black;
+  padding: 20px;
+}
+
+.timeline--tweet--btn {
+  border-radius: 2em;
+  border: none;
+  background-color: rgb(29, 161, 242);
+  color: white;
+  padding: 12px;
+  font-weight: bold;
+  font-size: 15px;
+  width: 20%;
+  align-self: flex-end;
+  margin: 20px;
+}
+
+.tweet--input {
+  display: flex;
+  width: 95%;
+  background-color: black;
+  outline: none;
+  border: none;
+  color: white;
+  font-size: 20px;
+  font-weight: bold;
+  line-height: 50px;
+}
+
+.tweet--input:focus {
+  border: 2px solid rgb(29, 161, 242);
+}
+
+.container {
+  border: 1px solid gray;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  display: flex;
+  flex-direction: column;
+}
+
+hr {
+  width: 75%;
+  opacity: 0.3;
+  margin-left: 18%;
+  margin-top: 0;
 }
