--- a/src/components/styles/signIn.css
+++ b/src/components/styles/signIn.css
@@ -89,7 +89,7 @@ button.input {
   font-weight: bold;
 }
 
-h2 {
+.header2 {
   width: 55%;
   text-align: center;
   border-bottom: 1px solid white;
