--- a/src/components/styles/timeline.css
+++ b/src/components/styles/timeline.css
@@ -69,7 +69,7 @@
   color: white;
   font-size: 20px;
   font-weight: bold;
-  line-height: 50px;
+  line-height: 30px;
 }
 
 .tweet--input:focus {
@@ -90,4 +90,29 @@ hr {
   opacity: 0.3;
   margin-left: 18%;
   margin-top: 0;
+}
+
+@media screen and (max-width: 550px) {
+  .newTweet {
+    height: 40px;
+  }
+  .tweet--input {
+    font-size: 15px;
+  }
+  hr {
+    width: 60%;
+    margin-left: 30%;
+  }
+  .timeline--header {
+    height: 0px;
+  }
+  .timeline--tweet--btn {
+    padding: 8px;
+    margin: 7px;
+    margin-right: 30px;
+  }
+  .tweet--input {
+    line-height: 15px;
+    height: 45px;
+  }
 }
