styling updated for mobile

--- a/src/components/styles/timeline.css
+++ b/src/components/styles/timeline.css
@@ -100,8 +100,7 @@ hr {
     font-size: 15px;
   }
   hr {
-    width: 60%;
-    margin-left: 30%;
+    display: none;
   }
   .timeline--header {
     height: 0px;
