--- a/src/components/styles/signIn.css
+++ b/src/components/styles/signIn.css
@@ -32,6 +32,7 @@
   border: 1px solid gray;
   align-self: center;
 }
+
 .input:focus {
   border: 2px solid rgb(29, 161, 242);
   outline: none;
@@ -53,6 +54,7 @@
   padding: 65px 40px;
   gap: 0.5%;
   width: 100%;
+  position: relative;
 }
 
 button.input {
@@ -127,4 +129,19 @@ h2 span {
 }
 
 @media screen and (max-width: 550px) {
+  .signUpForm {
+    padding: none;
+    height: 100%;
+    width: 100%;
+    margin-left: 4%;
+    overflow-y: hidden;
+    overflow-x: hidden;
+  }
+  .happening {
+    display: none;
+  }
+  .signIn {
+    overflow-y: hidden;
+    overflow-x: hidden;
+  }
 }
